--- a/modules/admin_manual/pages/enterprise/external_storage/wnd_quick_guide.adoc
+++ b/modules/admin_manual/pages/enterprise/external_storage/wnd_quick_guide.adoc
@@ -8,7 +8,7 @@ This is a quick guide for installing and configuring the Windows Network Drive (
 
 == Prerequisites
 
-To successfully use the Windows Network Drive app, you must meet the prerequisits which can be found in the xref:installation/manual_installation/server_prep_ubuntu_20.04.adoc[Server Preparation for Ubuntu 20.04]. In particular, these are the sections required which address `smblient` (
+To successfully use the Windows Network Drive app, you must meet the prerequisits which can be found in the xref:installation/manual_installation/server_prep_ubuntu_20.04.adoc[Server Preparation for Ubuntu 20.04]. In particular, these are the sections required which address `smbclient` (
 xref:installation/manual_installation/server_prep_ubuntu_20.04.adoc#clean-ubuntu-20-04-installation[Clean Ubuntu 20.04 Installation]) and `libsmbclient-php` (
 xref:installation/manual_installation/server_prep_ubuntu_20.04.adoc#libsmbclient-php-library[libsmbclient-php Library]).
 
@@ -17,10 +17,10 @@ xref:installation/manual_installation/server_prep_ubuntu_20.04.adoc#libsmbclient
 Install the WND app either via the Web Interface or the command line:
 
 WebUI::
-* The Windows Network Drive app has to be downloaded from in the Market App. Navigate to the Market app, search for Windows Network Drives and install it.
-* Post installing enable it it via menu:Settings[Admin > Apps].
+* The Windows Network Drive app has to be downloaded from the Market App. Navigate to the Market app, search for Windows Network Drive and install it.
+* Post installing enable it via menu:Settings[Admin > Apps].
 
-Commandline::
+Command line::
 [source,console,subs="attributes+"]
 ----
 {occ-command-example-prefix} market:install windows_network_drive
@@ -74,24 +74,24 @@ Create a service for systemd following the instructions below that checks the sh
 * For each WND mount point distinguished by a SERVER - SHARE pair:
 ** Replace the all upper case words `SERVER`, `SHARE`, `USER` and `PASSWORD` in both, the **filename** and in the **contents** below with their respective values.
 ** Place one copy of a file with the content from below under `/etc/systemd/system/owncloud-wnd-listen-SERVER-SHARE.service` +
-To do so, enter following command and replace <name> with `owncloud-wnd-listen-SERVER-SHARE`:
+To do so, enter the following command and replace <name> with `owncloud-wnd-listen-SERVER-SHARE`:
 +
 [source,console]
 ----
 sudo systemctl edit <name>.service
 ----
 +
-Reload the deamon to make it available for enablement:
+Reload the deamon to make it available:
 +
 [source,console]
 ----
 sudo systemctl daemon-reload
 ----
 ** Take care to also adjust the paths in `WorkingDirectory` and `ExecStart` according to your installation.
-** Password: Create a file readable only by the www-data and outside the directories handled by apache
+** Password: Create a file readable only by the www-data user and outside the directories handled by Apache
  (let's suppose in /tmp/mypass). The file must contain only the password for the share. In this example our
  file is: "/tmp/mypass". The listener will read the contents of the file and use them as the password for
-the account. This way, only root and the apache user should have access to the password.
+the account. This way, only root and the Apache user should have access to the password.
 ** `--password-trim` in directive `ExecStart` removes blank characters from the password file added by 3rdparty software or other services.
 
 * Content template for `owncloud-wnd-listen-SERVER-SHARE`
