Fix and improve the install and upgrade guides

--- a/modules/admin_manual/pages/maintenance/backup_and_restore/backup.adoc
+++ b/modules/admin_manual/pages/maintenance/backup_and_restore/backup.adoc
@@ -1,7 +1,8 @@
 = Backing up ownCloud
 :toc: right
 :page-aliases: go/admin-backup.adoc, \
-maintenance/backup.adoc
+maintenance/backup.adoc, \
+maintenance/backup_and_restore/index.adoc
 
 == Introduction
 
