--- a/modules/admin_manual/pages/maintenance/encryption/migrating-from-user-key-to-master-key.adoc
+++ b/modules/admin_manual/pages/maintenance/encryption/migrating-from-user-key-to-master-key.adoc
@@ -1,6 +1,7 @@
 = Migrating User Key Encryption to Master Key Encryption
 :toc: right
 :announcementcenter_url: {oc-marketplace-url}/apps/announcementcenter
+:page-aliases: maintenance/encryption/index.adoc
 
 == Introduction
 
