[10.9] [PR 81] Dev: rename {partialsdir} with partial$
Backport of PR #81

--- a/modules/developer_manual/pages/app/fundamentals/info.adoc
+++ b/modules/developer_manual/pages/app/fundamentals/info.adoc
@@ -7,7 +7,7 @@ explanation of what each of file's elements.
 
 [source,xml,subs="attributes+"]
 ----
-include::{partialsdir}app/fundamentals/complete-info.xml[]
+include::partial$app/fundamentals/complete-info.xml[]
 ----
 
 == id
