--- a/modules/developer_manual/pages/core/apis/index.adoc
+++ b/modules/developer_manual/pages/core/apis/index.adoc
@@ -1,4 +1,4 @@
 :section-title: APIs
 :section-preamble-ender: to use APIs in ownCloud 
 
-include::{partialsdir}section_page.adoc[]
+include::partial$section_page.adoc[]
