--- a/modules/developer_manual/pages/testing/index.adoc
+++ b/modules/developer_manual/pages/testing/index.adoc
@@ -1,5 +1,5 @@
 :section-title: Testing
 :section-preamble-ender: to learn about testing ownCloud's apps
 
-include::{partialsdir}section_page.adoc[optional attributes]
+include::partial$section_page.adoc[optional attributes]
 
