--- a/modules/developer_manual/pages/webdav_api/groups/group_membership_endpoints.adoc
+++ b/modules/developer_manual/pages/webdav_api/groups/group_membership_endpoints.adoc
@@ -15,9 +15,9 @@ This endpoint allows for listing all of the members in a custom group.
 
 NOTE: Only group members can list a group's members. Other users will receive a status of `HTTP/1.1 403 Forbidden`
 
-include::{partialsdir}/webdav_api/uri_request_table.adoc[]
+include::partial$/webdav_api/uri_request_table.adoc[]
 
-include::{partialsdir}/webdav_api/core_curl_request.adoc[]
+include::partial$/webdav_api/core_curl_request.adoc[]
 
 .{request_data_file}
 [source,xml]
@@ -43,7 +43,7 @@ include::example$core/webdav_api/group/response/list-group-members-successful-re
 
 ===== Failure
 
-include::{partialsdir}/webdav_api/responses/insufficient-privileges-overview.adoc[]
+include::partial$/webdav_api/responses/insufficient-privileges-overview.adoc[]
 
 ===  Add Member
 :request_method: PUT
@@ -54,9 +54,9 @@ This endpoint allows for adding members to a custom group.
 
 NOTE: Only group admins can add members.
 
-include::{partialsdir}/webdav_api/uri_request_table.adoc[]
+include::partial$/webdav_api/uri_request_table.adoc[]
 
-include::{partialsdir}/webdav_api/core_curl_request.adoc[]
+include::partial$/webdav_api/core_curl_request.adoc[]
 
 ==== Responses
 
@@ -79,7 +79,7 @@ If the request was made using any other method than `PUT`, then an `HTTP/1.1 405
 </d:error>
 ----
 
-include::{partialsdir}/webdav_api/responses/insufficient-privileges-overview.adoc[]
+include::partial$/webdav_api/responses/insufficient-privileges-overview.adoc[]
 
 ===  Remove Member
 :request_method: DELETE
@@ -92,9 +92,9 @@ NOTE: Only group admins can remove members.
 Group admins cannot remove themselves if no other admin exists in the group.
 A group member can remove themselves using this API call.
 
-include::{partialsdir}/webdav_api/uri_request_table.adoc[]
+include::partial$/webdav_api/uri_request_table.adoc[]
 
-include::{partialsdir}/webdav_api/core_curl_request.adoc[]
+include::partial$/webdav_api/core_curl_request.adoc[]
 
 ==== Responses
 
@@ -105,7 +105,7 @@ No other information will be returned or displayed.
 
 ===== Failure
 
-include::{partialsdir}/webdav_api/responses/insufficient-privileges-overview.adoc[]
+include::partial$/webdav_api/responses/insufficient-privileges-overview.adoc[]
 
 ===  Change Admin Role of a Member
 :request_method: PROPPATCH
@@ -114,9 +114,9 @@ include::{partialsdir}/webdav_api/responses/insufficient-privileges-overview.ado
 
 This endpoint allows for changing the admin role of an existing member of the group.
 
-include::{partialsdir}/webdav_api/uri_request_table.adoc[]
+include::partial$/webdav_api/uri_request_table.adoc[]
 
-include::{partialsdir}/webdav_api/core_curl_request.adoc[]
+include::partial$/webdav_api/core_curl_request.adoc[]
 
 ==== Responses
 
@@ -124,7 +124,7 @@ include::{partialsdir}/webdav_api/core_curl_request.adoc[]
 
 ===== Failure
 
-include::{partialsdir}/webdav_api/responses/insufficient-privileges-overview.adoc[]
+include::partial$/webdav_api/responses/insufficient-privileges-overview.adoc[]
 
 ===  List Group Memberships of a Given User
 :request_method: PROPFIND
@@ -134,9 +134,9 @@ include::{partialsdir}/webdav_api/responses/insufficient-privileges-overview.ado
 
 This endpoint lists the groups that a user is a member of.
 
-include::{partialsdir}/webdav_api/uri_request_table.adoc[]
+include::partial$/webdav_api/uri_request_table.adoc[]
 
-include::{partialsdir}/webdav_api/core_curl_request.adoc[]
+include::partial$/webdav_api/core_curl_request.adoc[]
 
 ==== Responses
 
@@ -156,7 +156,7 @@ include::example$core/webdav_api/group/response/list-group-memberships-of-a-give
 
 ===== Failure
 
-include::{partialsdir}/webdav_api/responses/insufficient-privileges-overview.adoc[]
+include::partial$/webdav_api/responses/insufficient-privileges-overview.adoc[]
 ////
 == REPORT
 
