--- a/modules/developer_manual/pages/webdav_api/index.adoc
+++ b/modules/developer_manual/pages/webdav_api/index.adoc
@@ -1,4 +1,4 @@
 :section-title: WebDAV APIs
 :section-preamble-ender: to ownCloud's WebDAV APIs 
 
-include::{partialsdir}section_page.adoc[]
+include::partial$section_page.adoc[]
