[10.9] [PR 82] Admin: rename {partialsdir} with partial$
Backport of PR #82

--- a/modules/admin_manual/pages/configuration/files/encryption/encryption_configuration.adoc
+++ b/modules/admin_manual/pages/configuration/files/encryption/encryption_configuration.adoc
@@ -74,7 +74,7 @@ Section: Files Which Are Never Encrypted
 is also used in the user guide, therefore included
 ////
 
-include::{partialsdir}/configuration/files/encryption/not-encrypted-files.adoc[]
+include::partial$/configuration/files/encryption/not-encrypted-files.adoc[]
 
 == Using a Hardware Security Module (HSM)
 
