--- a/modules/admin_manual/pages/configuration/files/encryption/index.adoc
+++ b/modules/admin_manual/pages/configuration/files/encryption/index.adoc
@@ -2,4 +2,4 @@
 :section-preamble-ender: to configure encryption in ownCloud
 :page-aliases: configuration/files/encryption/root.adoc
 
-include::{partialsdir}section_page.adoc[]
+include::partial$section_page.adoc[]
