--- a/modules/admin_manual/pages/configuration/server/occ_commands/core_commands/_config_commands.adoc
+++ b/modules/admin_manual/pages/configuration/server/occ_commands/core_commands/_config_commands.adoc
@@ -235,7 +235,7 @@ By default, passwords and other sensitive data are omitted from the report so th
 
 [source,json]
 ----
-include::{partialsdir}configuration/server/occ_command/config-list-report.json[]
+include::partial$configuration/server/occ_command/config-list-report.json[]
 ----
 
 === Displaying Sensitive Information
