--- a/modules/admin_manual/pages/configuration/user/reset_user_password.adoc
+++ b/modules/admin_manual/pages/configuration/user/reset_user_password.adoc
@@ -12,4 +12,4 @@ automatic reset:
 'lost_password_link' => 'https://example.org/link/to/password/reset',
 ----
 
-include::{partialsdir}configuration/user/update-password-note.adoc[]
+include::partial$configuration/user/update-password-note.adoc[]
