--- a/modules/admin_manual/pages/installation/manual_installation/manual_installation_db.adoc
+++ b/modules/admin_manual/pages/installation/manual_installation/manual_installation_db.adoc
@@ -35,7 +35,7 @@ MariaDB is the ownCloud recommended database. It may be used with either ownClou
 xref:configuration/database/linux_database_configuration.adoc[Database Configuration on Linux]
 guides.
 
-include::{partialsdir}installation/manual_installation/mariadb.adoc[leveloffset=+1]
+include::partial$installation/manual_installation/mariadb.adoc[leveloffset=+1]
 
 == PostgreSQL
 
