--- a/modules/admin_manual/pages/maintenance/encryption/migrating-from-user-key-to-master-key.adoc
+++ b/modules/admin_manual/pages/maintenance/encryption/migrating-from-user-key-to-master-key.adoc
@@ -122,7 +122,7 @@ encryption|enabled|yes
 encryption|useMasterKey|1
 ----
 
-include::{partialsdir}/configuration/server/disable-single-user-mode.adoc[leveloffset=+1]
+include::partial$/configuration/server/disable-single-user-mode.adoc[leveloffset=+1]
 
 == Post Note
 
