--- a/modules/admin_manual/pages/appliance/configuration/index.adoc
+++ b/modules/admin_manual/pages/appliance/configuration/index.adoc
@@ -1,4 +1,4 @@
 :section-title: Appliance Configuration
 :section-preamble-ender: to configure the ownCloud appliance. 
 
-include::{partialsdir}section_page.adoc[]
+include::partial$section_page.adoc[]
