--- a/modules/admin_manual/pages/configuration/files/external_storage/index.adoc
+++ b/modules/admin_manual/pages/configuration/files/external_storage/index.adoc
@@ -1,5 +1,5 @@
 :section-title: External Storage
 :section-preamble-ender: to configure external storage in ownCloud
 
-include::{partialsdir}section_page.adoc[]
+include::partial$section_page.adoc[]
 
