--- a/modules/admin_manual/pages/configuration/server/security/index.adoc
+++ b/modules/admin_manual/pages/configuration/server/security/index.adoc
@@ -1,7 +1,7 @@
 :section-title: Server Security
 :section-preamble-ender: to configure ownCloud securely
 
-include::{partialsdir}section_page.adoc[]
+include::partial$section_page.adoc[]
 
 * xref:configuration/server/security/oauth2.adoc[OAuth2]
 * xref:configuration/server/security/password_policy.adoc[Password Policy]
