--- a/modules/admin_manual/pages/enterprise/clients/index.adoc
+++ b/modules/admin_manual/pages/enterprise/clients/index.adoc
@@ -1,5 +1,5 @@
 :section-title: Enterprise Clients
 :section-preamble-ender: to configure ownCloud enterprise clients 
 
-include::{partialsdir}section_page.adoc[]
+include::partial$section_page.adoc[]
 
