--- a/modules/admin_manual/pages/enterprise/collaboration/index.adoc
+++ b/modules/admin_manual/pages/enterprise/collaboration/index.adoc
@@ -1,5 +1,5 @@
 :section-title: Enterprise Collaboration
 :section-preamble-ender: to configure enterprise collaboration in ownCloud
 
-include::{partialsdir}section_page.adoc[]
+include::partial$section_page.adoc[]
 
