--- a/modules/admin_manual/pages/enterprise/external_storage/index.adoc
+++ b/modules/admin_manual/pages/enterprise/external_storage/index.adoc
@@ -1,4 +1,4 @@
 :section-title: External Storage
 :section-preamble-ender: to configure enterprise external storage in ownCloud
 
-include::{partialsdir}section_page.adoc[]
+include::partial$section_page.adoc[]
