--- a/modules/admin_manual/pages/enterprise/file_management/index.adoc
+++ b/modules/admin_manual/pages/enterprise/file_management/index.adoc
@@ -1,5 +1,5 @@
 :section-title: Enterprise File Management
 :section-preamble-ender: to configure enterprise file management in ownCloud. 
 
-include::{partialsdir}section_page.adoc[]
+include::partial$section_page.adoc[]
 
