--- a/modules/admin_manual/pages/enterprise/firewall/index.adoc
+++ b/modules/admin_manual/pages/enterprise/firewall/index.adoc
@@ -1,5 +1,5 @@
 :section-title: Enterprise Firewall Configuration
 :section-preamble-ender: to configure enterprise firewall configuration in ownCloud appliance. 
 
-include::{partialsdir}section_page.adoc[]
+include::partial$section_page.adoc[]
 
