--- a/modules/admin_manual/pages/enterprise/logging/index.adoc
+++ b/modules/admin_manual/pages/enterprise/logging/index.adoc
@@ -1,4 +1,4 @@
 :section-title: Enterprise Logging Configuration
 :section-preamble-ender: to configure enterprise logging configuration in ownCloud 
 
-include::{partialsdir}section_page.adoc[]
+include::partial$section_page.adoc[]
