--- a/modules/admin_manual/pages/enterprise/reporting/index.adoc
+++ b/modules/admin_manual/pages/enterprise/reporting/index.adoc
@@ -1,4 +1,4 @@
 :section-title: Enterprise Reporting
 :section-preamble-ender: to setup reporting for the ownCloud Enterprise installation 
 
-include::{partialsdir}section_page.adoc[]
+include::partial$section_page.adoc[]
