--- a/modules/admin_manual/pages/enterprise/server_branding/index.adoc
+++ b/modules/admin_manual/pages/enterprise/server_branding/index.adoc
@@ -1,4 +1,4 @@
 :section-title: Enterprise Server Branding
 :section-preamble-ender: to configure enterprise server branding in ownCloud 
 
-include::{partialsdir}section_page.adoc[]
+include::partial$section_page.adoc[]
