--- a/modules/admin_manual/pages/installation/apps/index.adoc
+++ b/modules/admin_manual/pages/installation/apps/index.adoc
@@ -1,6 +1,6 @@
 :section-title: Managing Apps
 :section-preamble-ender: for installing and configuring apps
 
-include::{partialsdir}section_page.adoc[]
+include::partial$section_page.adoc[]
 
 
