--- a/modules/admin_manual/pages/maintenance/encryption/index.adoc
+++ b/modules/admin_manual/pages/maintenance/encryption/index.adoc
@@ -1,5 +1,5 @@
 :section-title: Encryption
 :section-preamble-ender: to maintain encryption in ownCloud 
 
-include::{partialsdir}section_page.adoc[]
+include::partial$section_page.adoc[]
 
