--- a/modules/admin_manual/pages/maintenance/upgrading/upgrade.adoc
+++ b/modules/admin_manual/pages/maintenance/upgrading/upgrade.adoc
@@ -26,7 +26,7 @@ installation and then restore your data from backup. Before attempting this,
 file a support ticket (if you have paid support) or ask for help in the
 ownCloud forums to resolve your issue without downgrading.
 
-include::{partialsdir}maintenance/major_release_note.adoc[]
+include::partial$maintenance/major_release_note.adoc[]
 
 == Prerequisites
 
