--- a/modules/admin_manual/pages/troubleshooting/index.adoc
+++ b/modules/admin_manual/pages/troubleshooting/index.adoc
@@ -1,5 +1,5 @@
 :section-title: Troubleshooting
 :section-preamble-ender: to troubleshoot ownCloud 
 
-include::{partialsdir}section_page.adoc[]
+include::partial$section_page.adoc[]
 
