[10.8] [PR 82] Admin: rename {partialsdir} with partial$
Backport of PR #82

--- a/modules/admin_manual/pages/installation/manual_installation/server_prep_ubuntu_20.04.adoc
+++ b/modules/admin_manual/pages/installation/manual_installation/server_prep_ubuntu_20.04.adoc
@@ -329,4 +329,4 @@ to install it.
 
 == Useful Tips
 
-include::{partialsdir}installation/manual_installation/useful_tips.adoc[leveloffset=+1]
+include::partial$installation/manual_installation/useful_tips.adoc[leveloffset=+1]
