--- a/modules/admin_manual/pages/maintenance/upgrading/upgrade_php.adoc
+++ b/modules/admin_manual/pages/maintenance/upgrading/upgrade_php.adoc
@@ -26,7 +26,7 @@ include::{partialsdir}/maintenance/upgrading/upgrade_steps.adoc[leveloffset=+1]
 :to-version: 7.3
 :to-pkg-version: 73
 
-include::{partialsdir}/maintenance/upgrading/upgrade_steps.adoc[leveloffset=+1]
+include::partial$/maintenance/upgrading/upgrade_steps.adoc[leveloffset=+1]
 
 == Restart Apache
 
