--- a/modules/admin_manual/pages/configuration/server/occ_commands/core_commands/_user_commands.adoc
+++ b/modules/admin_manual/pages/configuration/server/occ_commands/core_commands/_user_commands.adoc
@@ -426,7 +426,7 @@ Resets the password of the named user.
 {occ-command-example-prefix} user:resetpassword [options] [--] <user>
 ----
 
-include::{partialsdir}configuration/user/update-password-note.adoc[]
+include::partial$configuration/user/update-password-note.adoc[]
 
 === Arguments
 
