--- a/modules/admin_manual/pages/installation/quick_guides/ubuntu_20_04.adoc
+++ b/modules/admin_manual/pages/installation/quick_guides/ubuntu_20_04.adoc
@@ -1,12 +1,12 @@
 = Install ownCloud on Ubuntu 20.04
 :toc: right
+:page-aliases: installation/quick_guides/ubuntu_18_04.adoc
 
 == Introduction
 
 This is a short guide to installing ownCloud on a fresh installation of Ubuntu 20.04. Run the following commands in your terminal to complete the installation.
 
-This guide can not go into details and has its limits by nature. If you experience issues like with dependencies of PHP or other relevant things like the operating system, web server or database, look at the xref:installation/manual_installation/manual_installation.adoc#ubuntu-20-04-lts-server[Detailed Installation Guide]
-for more information.
+This guide can not go into details and has its limits by nature. If you experience issues like with dependencies of PHP or other relevant things like the operating system, web server or database, look at the xref:installation/manual_installation/manual_installation.adoc#ubuntu-20-04-lts-server[Detailed Installation Guide] for more information.
 
 == Prerequisites and Notes
 
@@ -15,8 +15,6 @@ for more information.
 * Your ownCloud directory will be located in `/var/www/owncloud/`.
 * php 7.4 is the default version installable with Ubuntu 20.04.
 * Use the correct xref:installation/manual_installation/manual_installation_apache.adoc#multi-processing-module-mpm[Multi-Processing Module (MPM)].
-
-
 
 == Preparation
 
@@ -66,7 +64,7 @@ apt install -y \
   php-apcu php-redis php-ldap 
 ----
 
-=== Install smb client php module
+=== Install smbclient php module
 
 [source,console]
 ----
@@ -158,7 +156,7 @@ service apache2 reload
 
 === Download ownCloud
 
-[source,console]
+[source,console,subs="attributes+"]
 ----
 cd /var/www/
 wget https://download.owncloud.org/community/{oc-complete-name}.tar.bz2 && \
@@ -214,7 +212,7 @@ If you need to sync your users from an LDAP or Active Directory Server, add this
 
 [source]
 ----
-echo "*/15 * * * * /var/www/owncloud/occ user:sync 'OCA\User_LDAP\User_Proxy' -m disable -vvv >> /var/log/ldap-sync/user-sync.log 2>&1" >> /var/spool/cron/crontabs/www-data}
+echo "*/15 * * * * /var/www/owncloud/occ user:sync 'OCA\User_LDAP\User_Proxy' -m disable -vvv >> /var/log/ldap-sync/user-sync.log 2>&1" >> /var/spool/cron/crontabs/www-data
 chown www-data.crontab  /var/spool/cron/crontabs/www-data
 chmod 0600  /var/spool/cron/crontabs/www-data
 mkdir -p /var/log/ldap-sync
