[10.8] [PR 75] Update ubuntu_20_04.adoc
Backport of PR #75

--- a/modules/admin_manual/pages/installation/quick_guides/ubuntu_20_04.adoc
+++ b/modules/admin_manual/pages/installation/quick_guides/ubuntu_20_04.adoc
@@ -232,7 +232,7 @@ occ config:system:set \
    --value '\OC\Memcache\Redis'
 occ config:system:set \
    redis \
-   --value '{"host": "127.0.0.1", "port": "6379"}' \
+   --value '{"host": "127.0.0.1", "port": "{std-port-redis}"}' \
    --type json
 ----
 
