--- a/modules/admin_manual/pages/maintenance/upgrading/manual_upgrade.adoc
+++ b/modules/admin_manual/pages/maintenance/upgrading/manual_upgrade.adoc
@@ -152,8 +152,12 @@ In addition, if there are installed apps (whether compatible or incompatible wit
 
 If you are using third party or enterprise applications, look in your new `/var/www/owncloud/apps/` or `/var/www/owncloud/apps-external/` directory to see if they are present. If not, copy them from your old instance to your new one.
 
-NOTE: Make sure that all app directories that are defined in the `apps_paths` section of your `config.php` file do exist in your new `/var/www/owncloud/` directory.
-
+NOTE: Make sure that all app directories that are defined in the `apps_paths` section of your `config.php` file do exist in your new `/var/www/owncloud/` directory. Also, make sure, that all ap directories listed in `apps_path` actually exist. If occ complains about missing `apps-external` then try
+[source,console]
+----
+sudo mkdir /var/www/owncloud/apps-external
+----
+ 
 === Permissions
 
 To finalize the preparation of the upgrade, you need to set the correct ownership and permissions of the new ownCloud files and folders.
@@ -186,14 +190,14 @@ Use `chmod` on files and directories with different permissions:
 +
 [source,console]
 ----
-sudo find . -type f -exec chmod 640 {} \;
+sudo find /var/www/owncloud -type f -exec chmod 640 {} \;
 ----
 
 * For all directories use `0750`
 +
 [source,console]
 ----
-sudo find . -type d -exec chmod 750 {} \;
+sudo find /var/www/owncloud -type d -exec chmod 750 {} \;
 ----
 
 If you have configured a script for xref:installation/manual_installation/script_guided_install.adoc[guided installations], you can use it for this step as well as it automates it.
